--- a/index.html
+++ b/index.html
@@ -117,49 +117,49 @@
       </div>
       <!------------------------------------------------------------>
       <div id="about">
-        <h1 class="title">關於DP</h1>
+        <h1 class="title">關於Deltec</h1>
         <div class="content">
-          <h2><b>DP專業機油特殊優勢</b></h2>
+          <h2><b>Deltec-專業潤滑油特殊優勢</b></h2>
           <p>　　別人進口機油，我們進口技術，別人派送專員勘查進口商，我們派送技術員與國際大廠研發技術，別人進口的是產品，我們去交流的是技術，擁有國際的技術，進口國際原料大廠，在地製造生產，過程全程監督，別人可以抽查前做足準備，我們永遠都在監督下做足品質。 </p>
           <hr/>
-          <h2><b>DP專業機油最終目標</b></h2>
+          <h2><b>Deltec-專業潤滑油最終目標</b></h2>
           <p>　　DP專業機油與台灣在地專業製造商合作，以及我們自身專業且完善的實驗室，來做到更優良的產品，來超越各種進口機油，以及台灣在地其他品牌，成為最專業的機油製造團隊，打造最強大的機油品牌。</p>
           <hr/>
-          <h2><b>DP推陳出新</b></h2>
+          <h2><b>Deltec推陳出新</b></h2>
           <p>　　DP專業機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。DP專業機油團隊的專業水準與國際標準看齊。專注發展和嚴以律己的精神，成就品牌的不同凡響。</p>
           <hr/>
-          <h2><b>DP專業機油核心價值</b></h2>
+          <h2><b>Deltec-專業潤滑油核心價值</b></h2>
           <h4><b>TECHNOLOGY</b></h4>
           <p>　　們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用自身嚴格把關和挑選國際級原物料，來創造最高品質的產品，在這方面的品質DP專業機油絕不怠惰。DP專業機油的產品性能，比市場上任何產品更好更優良。</p>
           <br>
           <h4><b>REATION</b></h4>
-          <p>　　DP專業機油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。</p>
+          <p>　　Deltec-專業潤滑油擁有最好的研發和創新技術的能力，透過不斷提高產品效能與品質的信念，是品牌發展與公司不斷突破的保證。</p>
           <br>
           <h4><b>COMMITMENT</b></h4>
-          <p>　　DP專業機油團隊的專業水準向國際標準看齊，專注研發和嚴以律己的態度，造就品牌的不同凡響。</p>
-          <p><br>　　➤我們認為在任何一個市場的顧客，都能得到最好的照顧。</br></p>
-          <p>　　➤我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保值最佳品質。</p>
+          <p>　　Deltec-專業潤滑油團隊的專業水準向國際標準看齊，專注研發和嚴以律己的態度，造就品牌的不同凡響。</p>
+          <p><br>➤我們認為在任何一個市場的顧客，都能得到最好的照顧。</br></p>
+          <p>　　➤我們使用國內外最尖端的技術，Deltec-專業潤滑油持續挑戰並精進自身技術並保值最佳品質。</p>
           <p>　　➤我們用原物料為我們自身把關和挑選創造高品質的產品，在這方面的品質DP專業機油絕不懈怠。</p>
           <p><br>　　DP專業機油產品性能夠比市場上任何產品更好。</br></p>
           <hr/>
-          <h2><b>DP所做的</b></h2>
-          <p>　　DP專業機油是與台灣在地製造商合作的網路行銷公司，以解決客戶需求為最優先。</p>
+          <h2><b>Deltec所做的</b></h2>
+          <p>　　DDeltec-專業潤滑油是與台灣在地製造商合作的網路行銷公司，以解決客戶需求為最優先。</p>
           <p><br>　　➤我們的價格：我們擁有國際的技術，台灣在地的產線，從原料、研發、量產、品管、包裝到出貨，完整的程序，達到最高品質及嚴格品管的最高原則，由網路行銷減少實體通路中被剝奪的利潤與不必要的成本，給顧客最直接的價格。</br></p>
           <p>　　➤我們的戰略：我們的戰略是通過在網路行銷，減少成本來達到與實體店家競爭，擁有相對便宜的價格卻又有高品質的商品當作我們的優勢，與許多進口盤商做競爭。 </p>
           <p>　　➤我們的策略：我們策略的實施建立在擁有在地製造商作為依靠，在技術與品管上面都能與國際品牌做抗衡，甚至超越，成就台灣製造不輸國際品牌之能力。</p>
           <p>　　➤我們的優勢：我們的主要優勢包括先進的技術開發和完整的產線，允許我們提供個人化開發項目，創造出與別人不同的價值。 </p>
           <p><br>　　綜合以上論點，我們能用最低的價格，做出最好的產品，盡量節省一切不必要的成本以及浪費，給予顧客CP值最高的價格，因為從研發到出貨都是統一管理，所以可以做到品質保證。</br></p>
           <hr/>
-          <h2><b>DP的堅持</b></h2>
+          <h2><b>Deltec的堅持</b></h2>
           <p>　　DP專業機油秉承創新與傳統，產品性能歷經實驗室精密調配以及數據驗證，來達到國產品牌超越進口品牌的目的，幫助您節省花費更能提高品質。我們擁有經驗豐富的設備製、專業的工程師以及完整的設備研發與生產，通過國際技術與自身研發部門共同創造更好的產品，研發更加先進的潤滑油品。無論是何種需求與條件，由我們幫助您克服目前和未來的挑戰。</p>
           <hr/>
-          <h2><b>DP的專業</b></h2>
+          <h2><b>Deltec的專業</b></h2>
           <p>　　我們使用國內外最尖端的技術，DP專業機油持續挑戰並精進自身技術並保持最佳品質。我們認為在任何一個市場的顧客，都能得到最好的照顧。我們用原物料為我們自身把關和挑選創造最高品質的產品，在品質方面DP專業機油絕不怠惰。DP專業機油產品性能，以數據佐證追求超越進口品牌。</p>
         </div>
       </div>
       <!------------------------------------------------------------>
       <div id="story">
-        <h1 class="title">關於DP</h1>
+        <h1 class="title">關於Deltec</h1>
         <div class="content">
           <h2><b>DELTEC品牌故事</b></h2>
           <p>　　DELTEC，是台灣石化工業與行銷學的集大成之作；2018年3月由幾個年輕新創團隊所創立的品牌，團隊成員的平均年齡不超過30歲，其目的是要以網路通路，向世界宣告台灣其實是擁有這個機油製造技術的！</p>
@@ -305,7 +305,7 @@
       <div id="footer">
         <div class="content row">
           <div class="col-12 col-md-6">
-            <h4>DP機油商業原則</h4>
+            <h4>Deltec商業原則</h4>
             <p>　　做為一家網路經銷公司配合台灣在地經營的製造商，我們擁有國際技術以及制定了高標準的品質和道德行為。以如何行事以及如何恪守本分，正直和尊重人的核心價值來判斷我們的團隊。</p>
             <p>　　我們的商業原則是基於這些原則的。促進信任、開放、團隊合作和專業精神，以及對我們做什麼和如何開展業務感到自豪。 我們希望DP機油的所有員工和團隊都了解並持續遵守我們的商業原則。</p>
           </div>
